# mithril-veil

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  gliner-integration.yml
app/: __init__.py  main.py
app/api/: routes_anonymize.py  routes_health.py  routes_presets.py
app/cli/: batch_cmd.py  main.py
app/core/: anonymizer.py  batch_report.py  entities.py  exceptions.py  gliner_config.py  mapping.py  pipeline.py  placeholders.py  policies.py  presets.py  report.py  schemas.py  span_merger.py  summary.py
docs/: TODO.md  architecture.md  cli_examples.md  deployment_vps.md  pii_taxonomy_ru.md  release_checklist.md  release_decision_note_v0.1.0.md  restore_workflow_design.md  roadmap.md  security_checklist.md  threat_model.md
examples/: synthetic_input.md  synthetic_input.txt
handoffs/: handoff-2026-05-19.md  handoff-2026-05-20-post-slice-11-1.md  handoff-2026-05-20-post-slice-12-1.md  handoff-2026-05-20-post-slice-13.md  handoff-2026-05-20-post-slice-15.md  handoff-2026-05-20-post-slice-16.md  handoff-2026-05-20-post-slice-8-1.md  handoff-2026-05-20-post-v0.1.0.md  handoff-2026-05-20.md
tests/: conftest.py  fixtures_generators.py  test_anonymizer.py  test_batch_io.py  test_cli.py  test_cli_batch.py  test_document_io.py  test_encrypted_mapping.py  test_gliner.py  test_health.py  test_mapping.py  test_mapping_hardening.py  test_natasha.py  test_odt.py  test_odt_hardening.py  test_presets.py  test_regex_detectors.py  test_report.py  test_rtf_hardening.py  test_span_merger.py  test_validators.py  test_version.py
(+25 files in other folders)
