[project]
name = "mithril-veil"
version = "0.1.0"
description = "Self-hosted Russian PII anonymization gateway for safer AI workflows"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Mithril Veil Contributors" }]
keywords = ["pii", "anonymization", "russian", "privacy", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "python-docx>=1.1.2",
    "pypdf>=5.1.0",
    "natasha>=1.6.0",
    "cryptography>=43.0.0",
]

[project.urls]
Homepage = "https://github.com/Kirill-Murashev/mithril-veil"

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.3.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "reportlab>=4.2.0",
]
gliner = [
    "gliner>=0.2.0",
]

[project.scripts]
mithril-veil = "app.cli.main:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -m 'not integration'"
markers = [
    "integration: tests that require downloaded ML model weights",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
